tests/NormalTests/paczka1/fuzzy1/12824381.err
Error in line 1: 19phuZsLeJ A584 93,9
Error in line 9: 4TxUdMZaO A559 89,2
Error in line 30: 0Qi7XQ A410 68,2
Error in line 29: 4TxUdMZaO A410 38,5
